# lpl

./: .editorconfig  Cargo.toml  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: sinusoidal.tape
src/: input.rs  main.rs  options.rs  ui.rs  util.rs
src/input/: csv.rs  json.rs  notifier.rs
src/ui/: data.rs  layer_chart.rs  layer_help.rs  layer_legend.rs  layer_warn.rs
