[package]
name = "lpl"
authors = ["SOFe <sofe2038@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/SOF3/lpl"
description = "A command-line utility to plot charts from line-based inputs."

[dependencies]
anyhow = "1.0.79"
arcstr = "1.1.5"
bitflags = "2.4.2"
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive", "cargo"] }
crossterm = "0.27.0"
csv = "1.3.0"
ctrlc = "3.4.1"
flexi_logger = "0.27.4"
futures = "0.3.28"
log = "0.4.21"
notify = "6.1.1"
num-traits = "0.2.18"
parking_lot = "0.12.1"
plotters = {version = "0.3.5", default-features = false, features = ["line_series"]}
plotters-ratatui-backend = {version = "0.1.3", features = ["widget"]}
portrait = "0.3.0"
rand = "0.8.5"
ratatui = "0.25.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114", features = ["raw_value"] }
tokio = { version = "1.36.0", features = ["fs", "macros", "rt-multi-thread", "io-util", "time"] }
tokio-util = "0.7.9"
