[package]
name = "lpl"
authors = ["SOFe <sofe2038@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/SOF3/lpl"
description = "A command-line utility to plot charts from line-based inputs."

[dependencies]
anyhow = "1.0.86"
arcstr = "1.2.0"
bitflags = "2.6.0"
chrono = "0.4.38"
clap = { version = "4.5.13", features = ["derive", "cargo"] }
crossterm = "0.27.0"
csv = "1.3.0"
ctrlc = "3.4.4"
flexi_logger = "0.28.5"
futures = "0.3.28"
log = "0.4.22"
notify = "6.1.1"
num-traits = "0.2.19"
parking_lot = "0.12.3"
plotters = {version = "0.3.6", default-features = false, features = ["line_series"]}
plotters-ratatui-backend = {version = "0.1.2", features = ["widget"]}
portrait = "0.3.0"
rand = "0.8.5"
ratatui = "0.25.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120", features = ["raw_value"] }
tokio = { version = "1.39.1", features = ["fs", "macros", "rt-multi-thread", "io-util", "time"] }
tokio-util = "0.7.11"
